fixed issue with container alignment

--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@ h1 {
 }
 
 .container {
-    height: 700px;
-    width: 1700px;
+    height: 800px;
+    width: 80%;
     border: 1px solid black;
-    margin-left: 100px;
+    margin-left: 10%;
+    margin-right: 10%;
     box-shadow: 10px 10px 30px grey;
     border-radius: 10px;
 
@@ -24,9 +25,10 @@ h2 {
 
 .container-2 {
     height: 50%;
-    width: 75%;
+    width: 70%;
     border: dashed gray;
-    margin-left: 210px;
+    margin-left: 15%;
+    margin-right: 15%;
     text-align: center;
     margin-top: 50px;
     padding-top: 15px;
